--- a/src/r/subpopulation_analysis.Rmd
+++ b/src/r/subpopulation_analysis.Rmd
@@ -45,7 +45,7 @@ library(reticulate)
 #load("D:/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
 
 # ACLX
-#load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
 
 # Linux
 #load("~/Data/scRNASeq/shea/lung.Robj")
